--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,15 @@
-alembic==1.13.1
 asgiref==3.7.2
-async-generator==1.10
 attrs==23.1.0
-beautifulsoup4==4.12.2
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.5
-cycler==0.11.0
 Django==4.2.4
 djangorestframework==3.15.1
-exceptiongroup==1.1.1
-Flask==2.2.2
 fonttools==4.34.4
-greenlet==3.0.3
 gunicorn==22.0.0
-h11==0.14.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.4
-lark==1.1.1
-lark-parser==0.12.0
 lxml==4.9.2
-Mako==1.3.2
-MarkupSafe==2.1.1
-matplotlib==3.5.3
-outcome==1.2.0
-packaging==21.3
 psycopg2-binary==2.9.9
 pycparser==2.21
 pyparsing==3.0.9
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-PyQt6==6.3.1
-PyQt6-Qt6==6.3.1
-PyQt6-sip==13.4.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytube==15.0.0
 requests==2.28.2
-selenium==4.11.2
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.27
 sqlparse==0.4.4
-trio==0.22.0
-trio-websocket==0.10.2
-typing_extensions==4.7.1
-tzdata==2023.3
 urllib3==1.26.15
-Werkzeug==2.2.2
-wsproto==1.2.0
+Pillow==8.3.2
