--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.2.4
 djangorestframework==3.15.1
 fonttools==4.34.4
 gunicorn==22.0.0
+psycopg2==2.2.9
 psycopg2-binary==2.9.9
 pycparser==2.21
 pyparsing==3.0.9
